fixed overflows

--- a/src/pages/home/Sts.css
+++ b/src/pages/home/Sts.css
@@ -12,12 +12,15 @@
  color: #000;
  border-radius: 20px;
  overflow: hidden;
+ align-items: center;
+ /* width: 100%; */
  padding: 0 10px 0 10px;
 }
 
 .select-s{
   padding: 10px; 
   color: #000;
+
   margin-left: 10px;
   background: #fff;
   border-left: 1px solid gray;
@@ -26,6 +29,7 @@
 .filters {
   display: flex;
   flex-direction: row;
+  gap: 8px;
   background: var(--db2);
   color: #fff;
   justify-content:space-around;
@@ -39,23 +43,21 @@
 }
 
 @media only screen and (max-width: 600px) {
-  .site-grid{
-    grid-template-columns: repeat(auto-fill, minmax(200px, 1fr)) !important; 
-  }
-  .site{
-    width: 150px !important;
-  }
-  .s-img{
-    height: 100px !important;
-  width: 100% !important;
-  }
+  
   .select-s{
     padding: 7px;
-    
-    width: 85px;
+    /* border :1px solid red; */
+    flex: 1;
+    width: 100%;
+
   }
   .filters{
-    height: 200px;
+    padding-top: 35px;
+  }
+  .filters>*{
+width: 100% !important;
+margin: 7px 0;
+    /* height: 200px; */
   }
   .search-d{
     margin-top: 1.5rem;
@@ -65,8 +67,12 @@
 .site-grid {
   margin-top: 2rem;
   cursor: pointer;
-  display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
+ display: flex;
+ width: 100%;
+ align-items: center;
+ justify-content: space-evenly;
+ gap: 18px;
+ flex-wrap: wrap;
   justify-items: center;
   background: #fff;
 }
@@ -82,12 +88,13 @@
 
 .site {
   padding: 10px;
-  width: 300px;
+ width: 300px;
   margin: 20px;
   border-radius: 5px;
-  background-color: gold;
+  /* background-color: gold; */
   transition: transform 0.2s ease;
-  box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.1);
+  border: 0.5px solid rgba(0, 0, 0, 0.325);
+  box-shadow: 0px 0px 15px 1px rgba(0, 0, 0, 0.1);
 }
 
 .site:hover {
@@ -96,18 +103,30 @@
 .content2{
    margin-top: 2rem;
 }
-.content2 img{
-   height: 250px;
-   width: 100%;
+.content2{
+  background: url("../../../public/banner/banner2.png");
+  height:40vh;
+width: 100%;
+background-size: cover;
+background-position: right;
+background-repeat: no-repeat;
+}
+.content1{
+  background: url("../../../public/banner/banner.png");
+  height: 60vh;
+width: 100%;
+background-size: cover;
+background-position: left;
+background-repeat: no-repeat;
 }
 
 .s-img{
-  height: 200px;
+  /* height: 200px; */
   width: 100%;
 }
 
 .site-d {
-  height: 100px;
+  /* height: 100px; */
   width: 100%;
   color: #000 ;
   font-weight: 700;
@@ -123,6 +142,7 @@
   background: #fff;
   color: #000;
   border-radius: 20px;
+  overflow: hidden;
   padding: 10px;
  
 }
