--- a/src/stylesheet/Home.css
+++ b/src/stylesheet/Home.css
@@ -16,7 +16,7 @@
 
 .festival img{
     
-    height: 502px;
+    /* height: 502px; */
     width: 100%;
 }
 .festival{
@@ -40,7 +40,7 @@ margin-top: 2rem;
 
 .calculator img{
   width: 100%;
-  height: 250px;
+  /* height: 250px; */
 }
 .calculator{
   margin-top: 2rem;
@@ -165,7 +165,7 @@ section {
         /* width: 100% !important; */
 }
 .hero-cont {
-
+margin-top: 50px;
     overflow: hidden !important;
     display: flex;
     /* margin:0 5vw; */
@@ -181,14 +181,14 @@ section {
     gap: 25px;
     margin-top: -12.5vh;
 }
-#homesec::after {
+/* #homesec::after {
     content: '';
     height: 100%;
     width: 100%;
     z-index: 111;
     background: #283c488c;
     position: absolute;
-}
+} */
 #homesec {
     position: relative;
 }
@@ -291,11 +291,8 @@ section {
     /* display: none; */
     /* background: gold; */
     width: 100%;
-    left: 0;
-    bottom: -75px;
-    margin-right: 5vh;
-    margin-left: 5vh;
-    /* margin-top: 10vh; */
+  width: 100%;
+  justify-content: space-evenly;
     
     z-index: 11;
 }
@@ -305,7 +302,10 @@ section {
     display: flex;
     align-items: center;
     justify-content: flex-start;
-    width: 47%;
+    width: 40%;
+    min-width: 300px;
+    max-width: 500px;
+    /* flex-shrink: 0 !important; */
     /* flex: 1 !important; */
     /* border: 5px solid red; */
     padding: 35px 22px;
@@ -374,7 +374,7 @@ section {
 }
 
 .rm {
-    font-size: 1rem;
+    font-size: 0.85rem;
     font-family: var(--font6);
     width: fit-content;
     cursor: pointer;
@@ -382,7 +382,7 @@ section {
     font-weight: 500;
     border: 1px solid var(--blue);
     background: var(--blue);
-    padding: 5px;
+    padding: 7px 22px;
     color: #000;
     /* padding: 0 5px; */
 }
@@ -525,7 +525,7 @@ section {
 
 
 .of-grd>img {
-    width: 60%;
+    /* width: 60%; */
     position: relative;
     /* height: 50vh; */
     z-index: 1111;
@@ -649,11 +649,7 @@ background: linear-gradient(to right, #243B55, #141E30); /* W3C, IE 10+/ Edge, F
         url('https://png.pngtree.com/thumb_back/fw800/background/20230525/pngtree-different-brown-paper-shopping-bags-on-a-dark-background-image_2624565.jpg'); */
     }
 
-    #lnl {
-        overflow: hidden;
-        min-height: 80vh;
-        position: relative !important;
-        }
+   
 
 #steps {
 
@@ -683,7 +679,7 @@ background: linear-gradient(to right, #243B55, #141E30); /* W3C, IE 10+/ Edge, F
     position: relative;
     min-height: 350px;
     /* border: 5px solid red; */
-    width: 250px;
+    width: 300px;
     /* gap: 15.5px; */
     }
 
@@ -868,12 +864,22 @@ background: linear-gradient(to right, #243B55, #141E30); /* W3C, IE 10+/ Edge, F
 
 /*==================service======================*/
 #service-we-offer {
-    width: 40%;
+    width: 30%;
     margin: 0;
     padding: 5vh 0 0 0;
     position: relative;
+    /* border: 5px solid red; */
 }
-
+#lnl{
+    width: 70%;
+    /* border: 5px solid blueviolet; */
+    display: flex;
+    flex-direction: column;
+}
+#lnl >*{
+    width: 100%;
+    flex-wrap: wrap;
+}
 #sp-of {
     float: right;
     height: 150px;
@@ -883,8 +889,8 @@ background: linear-gradient(to right, #243B55, #141E30); /* W3C, IE 10+/ Edge, F
 
  #service-we-offer h1 {
     font-size: 3rem;
-    width: 150%;
-    padding: 0 0 0 0;
+    /* width: 150%; */
+    padding: 0 25px !important;
     font-weight: 600;
     color: #1e231f;
     font-family: var(--font8);
@@ -994,7 +1000,7 @@ background: linear-gradient(to right, #243B55, #141E30); /* W3C, IE 10+/ Edge, F
 
     #service {
         padding-bottom: 0 !important;
-        margin-top: 4.5rem;
+        /* margin-top: 4.5rem; */
 }
 
 #service .ser-head {
@@ -1022,12 +1028,19 @@ background: linear-gradient(to right, #243B55, #141E30); /* W3C, IE 10+/ Edge, F
 .sh1 {
     flex: 1;
 }
-
+#pop-ser .rm{
+    color: #fff !important;
+}
 .service-img{
-    padding-left: 79px;
+    /* border: 2px solid red; */
+    /* background: red; */
+    /* margin-left: 7vw; */
+    width: 100%;
+    margin: auto;
+    /* padding-left: 79px;
     height: 60vh;
     width: 110vh;
-    margin-left: 20px;
+    margin-left: 20px; */
 }
 
 @media only screen and (max-width: 600px) {
@@ -1039,24 +1052,18 @@ background: linear-gradient(to right, #243B55, #141E30); /* W3C, IE 10+/ Edge, F
         width: 45% !important;
     }
     .service-img{
-        height: 63vh !important;
-        width: 72vh !important;
-        padding-left: 0 !important;
-        max-width: 200% !important;
     }
-    #service-we-offer h1{
-        font-family: var(--font6) !important;
-        font-size: 2.1rem !important;
-        font-weight: 600 !important;
-        border-bottom: 1px solid #000;
-        margin-left: 6rem;
-    }
-    #pop-ser{
-        margin-left: 0;
-        margin-right: 0;
-    }
+  
+ 
     .ps{
-        margin: 25px auto;
+        margin: 15px auto;
+        flex-direction: column;
+
+    }
+    .ps-r >*{
+        align-self: center;
+        justify-self: center;
+        text-align: center;
     }
     .t-title {
         font-family: var(--font6) !important;
@@ -1073,12 +1080,16 @@ background: linear-gradient(to right, #243B55, #141E30); /* W3C, IE 10+/ Edge, F
     font-size: 1.2rem;
 }
 
+.ser-cards .btn{
+    min-width: fit-content;
+}
 .ser-cards {
     display: flex;
     align-items: center;
     gap: 0px;
     margin: 10vh 0 0 0;
     margin-top: 12vh;
+    padding: 0 5vw;
     flex-direction: row;
     justify-content: space-between;
     margin-bottom: 3rem;
